src/theme-gcwu-fegc/sass/includes/_default-mobile.scss
/*
 * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 * wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt
 */
@import "compass/css3/text-shadow";
@import "compass/css3/box-shadow";
@import "compass/css3/border-radius";
@import "compass/css3/images";

body {
	@if $experimental-support-for-webkit {
		-webkit-text-size-adjust: none;
	}
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 80%;
	color: #333;
}

a {
	color: #295376;
	font-weight: bold;
	&:active {
		text-decoration: underline !important;
	}
}

blockquote {
	@extend %no-margin-no-shadow;
}

%no-margin-no-shadow {
	margin-left: 0;
	margin-right: 0;
	@include text-shadow(none);
}

form {
	@extend %no-margin-no-shadow;
}

#{headings(2,6)} {
	@extend %no-margin-no-shadow;
}

img {
	@extend %no-margin-no-shadow;
	max-width: 100%;
	height: auto;
	display: block;
}

li {
	&#gcwu-gcft-ca { //TODO: Is this ID ever outside an li?
		a {
			padding-left: 0;
			padding-right: 0;
			font-size: 0.7em;
			border: none;
		}
	}
}

p {
	@extend %no-margin-no-shadow;
}

pre {
	@extend %no-margin-no-shadow;
}

table {
	@extend %no-margin-no-shadow;
}

/* Override jQuery Mobile hiding of content on mobile loading to eliminate white flicker */
.ui-mobile-rendering {
	> {
		* { //TODO: Why use child and wildchard selectors nested?
			visibility: visible !important;
		}
	}
}

#wb-skip {
	a {
		&, &:link, &:visited {
			@include text-shadow(none !important);
		}
	}
}

[id|="wb-body-sec"] {
	#wb-skip2 {
		display: none;
		visibility: hidden;
	}
}

#wb-head {
	@extend %period-after-pseudo;
	#gcwu-wmms {
		clip: rect(1px, 1px, 1px, 1px);
		height: 0 !important;
		overflow: hidden !important;
		position: absolute;
		width: 0 !important;
		margin: 0 !important;
	}
}

[id|="wb-body"] {
	background: #fff !important;
}

#gcwu-title {
	min-height: 40px;
	font-weight: 700;
	padding: 2px 5px;
	a {
		font-size: 1.5em;
		color: #fff !important;
		@include text-shadow(0 1px 1px #044062);
		text-decoration: none;
	}
}

#wb-foot {
	#gcwu-wmms {
		img {
			margin: 5px auto;
		}
	}
}

#gcwu-sig {
	float: left;
	margin: 10px 0 10px 5px;
	img {
		margin-bottom: 0;
	}
}

#gcwu-date-mod {
	@extend %period-after-pseudo;
	float: right;
	margin: 5px 0;
}

#gcwu-priorities {
	li {
		text-align: center;
	}
	ul {
		@extend %period-after-pseudo;
	}
}

[class*="span-"]{
	position: relative;
}

#wb-main-in {
	padding-left: 5px;
	padding-right: 5px;
	h1 {
		border-bottom: 1px solid #e5e5e5;
		font-weight: 400;
		margin-top: 5px;
		position: static !important;
		&.wb-invisible {
			position: absolute !important;
		}
	}
	.span-1, .span-2, .span-3, .span-4, .span-5, .span-6, .span-7, .span-8, .span-9, .span-10, .span-11, .span-12 {
		margin-bottom: 20px;
	}
}

.clear {
	clear: both;
	display: block;
	height: 0;
	overflow: hidden;
	visibility: hidden;
	width: 0;
	margin: 0;
}

.ui-mobile {
	#gcwu-srch {
		@include box-shadow(none);
	}
	#wb-sec {
		display: none;
	}
	.ui-content {
		padding: 0 15px;
	}
	.wet-boew-menubar {
		a {
			padding: 0;
		}
	}
}

#wb-sec {
	padding: 5px;
}

%background-efefef {
	background: #efefef;
}

#gcwu-sft {
	@extend %background-efefef;
	padding-bottom: 5px;
	margin-top: 5px;
	.ui-footer {
		border: 0;
	}
	li {
		a {
			&.ui-btn {
				font-weight: 700;
				margin: 0;
				border-top-width: 0;
			}
			&.ui-btn-active {
				color: #fff;
			}
		}
		&:nth-child(1), &:nth-child(2) {
			a {
				&.ui-btn {
					border-top-width: 1px;
				}
			}
		}
		&.ui-block-a {
			a {
				&.ui-btn {
					border-right-width: 0;
				}
			}
		}
	}
}

#gcwu-sft-in {
	@extend %period-after-pseudo;
	@extend %background-efefef;
	border-top: 1px solid #CCCCCC;
	padding: 5px;
	div {
		width: 50%;
		float: left;
	}
}

#gcwu-tctr {
	width: auto;
	padding: 0;
	li {
		display: inline;
		&.gcwu-tc {
			border-right: 1px solid #999;
			padding: 0 9px 0 0;
		}
	}
	.gcwu-tr {
		padding-left: 6px;
	}
}

#gcwu-gcft {
	clear: both;
	margin: 0;
	padding: 5px;
	li {
		width: 50%;
		float: left !important;
		margin: 10px 0;
		&#gcwu-gcft-ca { //TODO: Overly specific? Would #gcwu-gcft-ca ever be outside #gcwu-gcft
			div {
				text-align: left;
			}
		}
	}
	ul {
		@extend %period-after-pseudo;
	}
}

#gcwu-gcnb {
	ul {
		margin: 0 5px 0 0;
		li {
			display: none;
			padding-top: 8px;
		}
		#gcwu-gcnb-lang { //TODO: Overly specific? Should this be combined with the rule below?
			display: inline;
			float: right;
			margin-bottom: 2px;
		}
	}
}

#gcwu-gcnb-lang {
	a {
		color: #222;
		text-decoration: none;
		background: #eee;
		border: 1px solid #ddd;
		@include border-radius(2px);
		float: right;
		font-weight: 400;
		padding: 3px;
		text-transform: capitalize;
	}
}

#gcwu-srch-submit {
	min-height: 22px;
	display: inline;
	margin: 0;
}

%gcwu-default-mobile-monster { //TODO: better name
	width: 50%;
	float: right;
	border-top: 1px solid #044062;
	h2 {
		@include text-shadow(0 1px 1px #044062);
		background-color: #333333;
		@include background-image(linear-gradient(#444444, #2D2D2D));
		&:hover, &:focus, &:active {
			background-color: #444444;
			@include background-image(linear-gradient(#606060, #333333));
		}
		color: #fff;
		text-align: center;
		font-size: 1em;
		text-transform: capitalize;
		position: relative;
		font-weight: 700;
		margin: 0;
		padding: 0.7em 18px 0.8em 0;
		border: {
			top: 1px solid rgba(255, 255, 255, 0.3);
			bottom: 1px solid #000;
			left: 1px solid #000;
			right: none;
		}
		a {
			color: #fff;
			text-decoration: none;
		}
	}
}

#gcwu-bnr {
	@extend %clear-both;
	background: #4E7EB7;
	.ui-navbar {
		a {
			&.ui-btn-active {
				background-color: #444444;
				@include background-image(linear-gradient(#606060, #333333));
				border: 1px solid #000;
				border-right: none;
			}
		}
	}
}

#gcwu-psnb {
	@extend %gcwu-default-mobile-monster;
	h2 {
		span {
			display: none;
		}
	}
	#gcwu-psnb-in {
		@extend %display-none;
	}
}

#gcwu-srchbx {
	@extend %gcwu-default-mobile-monster;
	form {
		@extend %display-none;
	}
	h2 {
		padding-right: 20px;
	}
}

#gcwu-bnr-in {
	.ui-mini {
		.ui-btn-inner {
			font-size: 1em;
		}
	}
}

.wet-boew-menubar {
	a {
		background: #eee;
		border: {
			top: 1px solid #ccc;
			bottom: 1px solid #ccc;
		}
		color: #222;
		display: block;
		font-weight: 700;
		padding: 0.8em 0 0.9em;
		position: relative;
		text: {
			align: center;
			decoration: none;
		}
		z-index: 200;
	}
	ul {
		list-style-type: none;
		margin: 0;
		padding: 0;
		position: relative;
		z-index: 1;
	}
	li {
		color: #333;
		@include text-shadow(0 1px 0 #fff);
		position: relative;
		z-index: 1;
		h3 {
			font: {
				weight: 400;
				size: 1em;
			}
			margin: 0;
			padding: 0;
		}
		.mb-sm {
			@extend %display-none;
			* {
				@extend %display-none;
			}
		}
	}
}

%clear-both {
	clear: both;
}

#wb-core {
	@extend %clear-both;
}

%period-after-pseudo {
	&:after {
		content: ".";
		display: block;
		height: 0;
		clear: both;
		visibility: hidden;
	}
}

%display-none {
	display: none;
}

#gcwu-bc {
	@extend %display-none;
}

.ui-content {
	.ui-listview {
		margin: 0 -15px;
	}
}

%font-1em-marning-0 {
	font-size: 1em;
	margin: 0;
}
.ui-collapsible-heading {
	@extend %font-1em-marning-0;
}

.ui-li-static {
	@extend %font-1em-marning-0;
}

%h1-border-bottom-none {
	h1 {
		border-bottom: none;
	}
}
.ui-dialog {
	@extend %h1-border-bottom-none;
}

.ui-popup {
	@extend %h1-border-bottom-none;
}

%gcwu-default-mobile-ui-bar-a-h1-white {
	.ui-bar-a {
		h1 {
			color: #fff;
		}
	}
}

#jqm-wb-search {
	@extend %gcwu-default-mobile-ui-bar-a-h1-white;
}

#jqm-wb-mb {
	@extend %gcwu-default-mobile-ui-bar-a-h1-white;
	a {
		&:link {
			text-decoration: none
		}
	}
	h1 {
		border-bottom: none;
	}
	h2 {
		color: #555;
	}
	h3 {
		&.top-section {
			font-size: 1.2em;
		}
	}
	div {
		&.ui-collapsible-set + h2 {
			border-top: 3px groove #fff;
			padding-top: 8px;
			margin-top: 23px;
		}
	}
	.ui-content {
		padding: 0 15px 5px;
		.ui-listview {
			margin: 0;
		}
		h2 {
			+ {
				ul {
					&.ui-listview {
						margin-bottom: 1em;
					}
				}
			}
		}
	}
	.ui-btn-inner {
		white-space: normal;
	}
	.ui-btn-icon-top {
		.ui-btn-inner {
			padding: 0.6em 33px 0.7em 10px;
		}
	}
	.ui-btn-icon-right {
		span {
			&.ui-btn-inner {
				padding-left: 40px;
			}
		}
		div {
			&.ui-btn-inner {
				padding-left: 25px;
			}
		}
	}
	.ui-body-a {
		background: #FFF;
	}
	.ui-collapsible-set {
		margin: 0;
		a {
			white-space: normal;
		}
	}
	.ui-collapsible-heading {
		.ui-btn {
			border-left-width: 1px;
			border-right-width: 1px;
		}
		&:not(.ui-collapsible-heading-collapsed) {
			a {
				@include border-bottom-left-radius(0);
				@include border-bottom-right-radius(0);
			}
		}
	}
	.ui-collapsible-content {
		padding: 0;
		a {
			padding-left: 55px;
			&.ui-btn-icon-left {
				padding-left: 0px;
			}
		}
		.ui-btn-icon-right {
			.ui-btn-inner {
				padding-left: 0;
			}
		}
		.ui-collapsible-heading-toggle {
			padding-left: 15px;
		}
		.wb-nested-menu {
			a {
				padding-left: 70px;
				&.ui-btn-icon-left {
					padding-left: 15px;
				}
				padding-left: 70px;
			}
			.ui-collapsible-heading-toggle {
				padding-left: 30px;
			}
			.wb-nested-menu {
				a {
					padding-left: 85px;
				}
				.ui-collapsible-heading-toggle {
					padding-left: 45px;
				}
			}
		}
		.wb-nested-li-heading {
			a {
				border-top: 0;
			}
		}
	}
	.ui-collapsible-content {
		padding: 0;
	}
	.ui-li-static {
		border-left: none;
		border-right: none;
		background: #F4F4F4;
	}
	.ui-btn {
		margin: 0;
		text-align: left;
	}
	.ui-li {
		padding: 0;
		border-width: 1px 1px 0 1px;
		.ui-collapsible {
			&:first-child {
				margin-top: -1px;
			}
		}
	}
	.ui-corner-bottom {
		border-bottom-width: 1px;
	}
	.top-section {
		a {
			margin: 0 0 5px;
			@include border-radius(0);
		}
	}
	.top-level {
		&.ui-btn-corner-all {
			@include border-radius(0.6em);
		}
	}
	#gcwu-bc-in {
		background: #DFDFDD;
		@include background-image(linear-gradient(#F0EFEF, #DFDFDD));
		color: #555;
		@include border-radius(0);
		@include text-shadow(0 1px 1px #fff);
		border-bottom: 1px solid #ccc;
		@include box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
		a {
			color: #295376;
			text-decoration: none;
			@include border-radius(0);
			&:hover, &:active {
				text-decoration: underline;
			}
		}
		li {
			float: left;
			margin: 0;
			padding: 5px 12px 5px 5px;
			@include border-radius(0);
			&:last-child {
				background-image: none;
				padding-left: 5px;
			}
		}
		ol {
			@extend %period-after-pseudo;
			line-height: 1.57em;
			list-style-type: none;
			margin: 0;
			padding: 0;
			font-size: 90%;
		}
	}
}

#jqm-mb-location-text {
	margin: 0 -15px 10px;
	h2 {
		display: none;
	}
}

.mobile-hide {
	display: none !important;
}

.mobile-show {
	display: block !important;
}

.ui-loader-default {
	h1 {
		margin: 0;
		padding: 0;
		border: 0;
	}
}

.no-js {
	#gcwu-srch {
		margin-top: 3px;
		padding: 3px 0;
	}
	#gcwu-psnb {
		li {
			border: 1px solid #222;
		}
		a {
			color: #222;
			padding: 0.45em 0.79em;
		}
	}
	.ui-content {
		padding: 0;
	}
	.mobile-pe {
		display: none !important;
	}
}

.pe-disable {
	#gcwu-psnb {
		margin-top: -11px;
	}
	#gcwu-psnb, #gcwu-srchbx {
		width: 100% !important;
		float: none;
	}
	#gcwu-psnb #gcwu-psnb-in, #gcwu-srchbx form {
		display: block;
		width: 100%;
		z-index: 100;
	}
	#gcwu-srchbx {
		form {
			border-bottom: 1px solid #999;
			text-align: center;
			background: #1A3D6C;
			padding: 10px 0;
		}
	}
}

